2013-11-09 Wolfgang Hofer <hof@gimp.org>

  - replaced outdated Incorrect software address of Free software foundation 
    in comments in the 2-8 branch sources (assuggested in #711402)
 
   OLD:
     * You should have received a copy of the GNU General Public License
     * along with this program; if not, write to the Free Software
     * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.

   NEW:
    * You should have received a copy of the GNU Lesser General Public
    * License along with this library.  If not, see
    * <http://www.gnu.org/licenses/>.
  
  * This touched nearly all *.c and *.h files

2013-09-09 Wolfgang Hofer <hof@gimp.org>

- Replaced some deprecated calls by gimp-2.8 compatible pendants.
  (this task is not yet finished, but current GAP should now run
  both with GIMP-2.8 and GIMP-2.9 git master with remarkable less annoying deprection warning pop up windows)
  
  Handled so far:
     gimp_selection_load        ==> gimp_image_select_item
     gimp_drawable_transform_*  ==> gimp_item_transform_*
     gimp_image_add_layer       ==> gimp_image_insert_layer (was already done at creation of branch gap-2-8)
     
  gap-2-8 branch now requires at least gimp-2.8.0 version.

  * configure.in
  * gap/gap_fg_matting_exec.c
  * gap/gap_image.c
  * gap/gap_mod_layer.c
  * gap/gap_mov_render.c
  * gap/gap_wr_resynth.c
  * gap/gap_wr_trans.c

  * gap/gap_layer_copy.c
  * gap/gap_pdb_calls.c
  * gap/gap_story_file.c
  * gap/gap_story_render_processor.c

  * gap/gap_detail_align_exec.c
  * gap/gap_mov_render.c

  (2013-07-21) merged latest features from master to gap-2-8 branch


- Moved render framename feature to submenu.
   from menu  <Image>/Video/Filename to Layer
   to menu    <Image>/Video/Layer/Render/Filename to Layer
 
   
- added support for processing of incomplete frame sequences where some frame images are missing.
  old behaviour handled this case as error condition and stopped processing.