@@ -17,7 +17,7 @@
  *
  * You should have received a copy of the GNU General Public License
  * along with this program; if not, write to the Free Software
- * Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+ * <http://www.gnu.org/licenses/>.
  */
 /* revision history:
  * version 2.1.0a; 2004/04/18  hof: created
