@@ -29,7 +29,7 @@
 ;
 ; You should have received a copy of the GNU General Public License
 ; along with this program; if not, write to the Free Software
-; Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+; <http://www.gnu.org/licenses/>.
 
 
 (define (script-fu-selection-to-anim-image image drawable copies bgfill filter-all)
